--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,6 +2,7 @@ name: Go
 
 on:
   push:
+    paths: apis/trips/**
     branches: [ develop ]
 
 jobs:
@@ -17,7 +18,7 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go build -v .
+      run: go build -v ./apis/trips/
 
     - name: Test
-      run: go test -v .
+      run: go test -v ./apis/trips/
