--- a/.github/workflows/poi.yaml
+++ b/.github/workflows/poi.yaml
@@ -3,9 +3,8 @@ name: .NET
 on:
   push:
     branches: [ develop ]
-  pull_request:
-    branches: [ main ]
-
+    paths: ./apis/poi/**
+  
 jobs:
   build:
 
@@ -17,9 +16,5 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test ./apis/poi/tests/UnitTests --verbosity normal
