--- a/.github/workflows/go_manual.yml
+++ b/.github/workflows/go_manual.yml
@@ -17,6 +17,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
+        
+    - name: init
+      run: go mod init -v ./apis/trips/
 
     - name: Build
       run: go build -v ./apis/trips/
