--- a/.github/workflows/dotnet.yaml
+++ b/.github/workflows/dotnet.yaml
@@ -16,6 +16,6 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.0
+        dotnet-version: 3.1.x
     - name: Test
       run: dotnet test ./apis/poi/tests/UnitTests --verbosity normal
