--- a/.github/workflows/go_manual.yml
+++ b/.github/workflows/go_manual.yml
@@ -10,8 +10,9 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./apis/trips/
+    defaults:
+      run:
+        working-directory: ./apis/trips/
     steps:
     - uses: actions/checkout@v2
 
