--- a/.github/workflows/go_manual.yml
+++ b/.github/workflows/go_manual.yml
@@ -23,7 +23,7 @@ jobs:
         
 
     - name: Build
-      run: go build -v ./...
+      run: go build -mod=mod -v ./...
 
     - name: Test
       run: go test -v ./...
