--- a/.github/workflows/go_manual.yml
+++ b/.github/workflows/go_manual.yml
@@ -26,4 +26,5 @@ jobs:
       run: go build -mod=mod -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test ./tripgo -run Unit
+#       run: go test -v ./...
