--- a/.github/workflows/go_manual.yml
+++ b/.github/workflows/go_manual.yml
@@ -5,6 +5,9 @@ on:
   push:
     paths: apis/trips/**
     branches: [ develop ]
+  pull_request:
+    paths: apis/trips/**
+    branches: [ main ]
 
 jobs:
 
