--- a/.github/workflows/go_manual.yml
+++ b/.github/workflows/go_manual.yml
@@ -10,7 +10,6 @@ on:
     branches: [ main ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     defaults:
@@ -31,3 +30,11 @@ jobs:
     - name: Test
 #       run: go test ./tripsgo -run Unit
       run: go test -v ./...
+      
+  
+    - name: The job has failed
+      if: ${{ failure() }}
+      run: gh issue create --title {{ env.GITHUB_WORKFLOW }} --body "Here are more details."
+      
+
+          
