--- a/.github/workflows/go_manual.yml
+++ b/.github/workflows/go_manual.yml
@@ -31,6 +31,9 @@ jobs:
 #       run: go test ./tripsgo -run Unit
       run: go test -v ./...
       
+    - name: gh login
+      if: ${{ failure() }}
+      run: gh auth login
   
     - name: The job has failed
       if: ${{ failure() }}
