--- a/.github/workflows/go_manual.yml
+++ b/.github/workflows/go_manual.yml
@@ -25,11 +25,11 @@ jobs:
         
 
     - name: Build
-      run: go build -mod=mod -v .
+      run: go build -mod=mod -v ./...
 
     - name: Test
-#       run: go test ./tripsgo -run Unit
-      run: go test -v ./...
+      run: go test ./tripsgo/... -run Unit
+#       run: go test -v ./...
 
     - name: The job has failed
       if: ${{ failure() }}
