--- a/.github/workflows/build user-java.yml
+++ b/.github/workflows/build user-java.yml
@@ -52,7 +52,7 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }} 
        
     - run: | 
-        docker build ./apis/user-java/ -t openhackiaw3kcz1acr.azurecr.io/appdb:${{ github.sha }} .
+        docker build ./apis/user-java/ -t openhackiaw3kcz1acr.azurecr.io/appdb:${{ github.sha }}
         docker push openhackiaw3kcz1acr.azurecr.io/appdb:${{ github.sha }}
         
     - name: Checking workflow status
