--- a/.github/workflows/nodejsv2.yaml
+++ b/.github/workflows/nodejsv2.yaml
@@ -22,13 +22,10 @@ jobs:
       with:
         node-version: '12.x'
     - name: npm install, build, and test
-      run: | 
-      #npm install
-      npm ci
-      run: npm run build --if-present
-      run: npm test        
+      run: npm ci
+    - run: npm run build --if-present
+    - run: npm test        
 
-     - name: Test
     - uses: azure/docker-login@v1 
       with: 
         login-server: openhackiaw3kcz1acr.azurecr.io
