--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,8 +28,8 @@ jobs:
       run: go build -mod=mod -v ./...
 
     - name: Test
-      run: go test ./tripsgo/... -run Unit
-#       run: go test -v ./...
+#       run: go test ./tripsgo/... -run Unit
+      run: go test -v ./...
 
     - uses: azure/docker-login@v1 
       with: 
