--- a/.github/workflows/user-java-api-build.yml
+++ b/.github/workflows/user-java-api-build.yml
@@ -39,21 +39,21 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file apis/user-java/pom.xml
 
-    - uses: azure/docker-login@v1 
-      with: 
-        login-server: openhackiaw3kcz1acr.azurecr.io
-        username: ${{ secrets.ACR_USERNAME }} 
-        password: ${{ secrets.ACR_PASSWORD }} 
+#    - uses: azure/docker-login@v1 
+#      with: 
+#        login-server: openhackiaw3kcz1acr.azurecr.io
+#        username: ${{ secrets.ACR_USERNAME }} 
+#        password: ${{ secrets.ACR_PASSWORD }} 
         
-    - uses: azure/docker-login@v1 
-      with: 
-        login-server: openhackiaw3kcz1acr.azurecr.io
-        username: ${{ secrets.ACR_USERNAME }} 
-        password: ${{ secrets.ACR_PASSWORD }} 
+#    - uses: azure/docker-login@v1 
+#      with: 
+#        login-server: openhackiaw3kcz1acr.azurecr.io
+#        username: ${{ secrets.ACR_USERNAME }} 
+#        password: ${{ secrets.ACR_PASSWORD }} 
        
-    - run: | 
-        docker build ./apis/user-java/ -t openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}
-        docker push openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}
+#    - run: | 
+#        docker build ./apis/user-java/ -t openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}
+#        docker push openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}
         
     - name: Checking workflow status
       if: ${{ failure() }}
