--- a/.github/workflows/dotnet_test.yaml
+++ b/.github/workflows/dotnet_test.yaml
@@ -2,9 +2,9 @@ name: POI API Build/Test/Package
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ develop ]
-    paths: ./apis/poi/**
+  pull_request:
+    paths: apis/poi/**
+    branches: [ main ]
   
 jobs:
   build:
