--- a/.github/workflows/dotnet_build.yml
+++ b/.github/workflows/dotnet_build.yml
@@ -21,11 +21,11 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }} 
        
     - run: | 
-        docker build ./apis/poi/web -t openhackiaw3kcz1acr.azurecr.io/dotnetpoi:${{ github.sha }} 
-        docker push openhackiaw3kcz1acr.azurecr.io/dotnetpoi:${{ github.sha }}
+        docker build ./apis/poi/web -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }} 
+        docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}
         
     - name: Checking workflow status
       if: ${{ failure() }}
-      run: gh issue create --title "${{ github.workflow }}-${{ github.run_id }}" --body "POI DotNet worflow failed."
+      run: gh issue create --title "${{ github.workflow }}-${{ github.run_id }}" --body "POI DotNet workflow failed."
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
