--- a/.github/workflows/user-java-api-main-deploy.yaml
+++ b/.github/workflows/user-java-api-main-deploy.yaml
@@ -14,12 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
-    - uses: azure/docker-login@v1 
-      with: 
-        login-server: openhackiaw3kcz1acr.azurecr.io
-        username: ${{ secrets.ACR_USERNAME }} 
-        password: ${{ secrets.ACR_PASSWORD }} 
         
     - uses: azure/docker-login@v1 
       with: 
@@ -27,9 +21,11 @@ jobs:
         username: ${{ secrets.ACR_USERNAME }} 
         password: ${{ secrets.ACR_PASSWORD }} 
        
-    - run: | 
-        docker build ./apis/user-java/ -t openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}
-        docker push openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}
+    - name: Build docker container 
+      run: docker build ./apis/user-java/ -t openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}
+    
+    - name: Pushing container image to ACR
+      run: docker push openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}
         
     - name: Checking workflow status
       if: ${{ failure() }}
