--- a/.github/workflows/dotnet_build.yml
+++ b/.github/workflows/dotnet_build.yml
@@ -23,7 +23,13 @@ jobs:
     - run: | 
         docker build ./apis/poi/web -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }} 
         docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}
-        
+    
+    - uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'openhackiaw3kcz1poi/staging'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        images: 'openhackiaw3kcz1acr.azurecr.io/openhackiaw3kcz1poi/staging:${{ github.sha }}'
+    
     - name: Checking workflow status
       if: ${{ failure() }}
       run: gh issue create --title "${{ github.workflow }}-${{ github.run_id }}" --body "POI DotNet workflow failed."
