--- a/.github/workflows/dotnet_build.yml
+++ b/.github/workflows/dotnet_build.yml
@@ -26,9 +26,10 @@ jobs:
     
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: 'openhackiaw3kcz1poi/staging'
+        app-name: 'openhackiaw3kcz1poi'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        images: 'openhackiaw3kcz1acr.azurecr.io/openhackiaw3kcz1poi/staging:${{ github.sha }}'
+        images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}'
+        slot-name: staging
     
     - name: Checking workflow status
       if: ${{ failure() }}
