--- a/.github/workflows/trips_build.yml
+++ b/.github/workflows/trips_build.yml
@@ -1,13 +1,11 @@
-name: Trips API
+name: Trips API Build
 
 on:
   workflow_dispatch:
   push:
-    paths: apis/trips/**
-    branches: [ develop ]
-  pull_request:
-    paths: apis/trips/**
+    paths: apis/poi/**
     branches: [ main ]
+
 
 jobs:
   build:
@@ -18,19 +16,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17
-        
-
-    - name: Build
-      run: go build -mod=mod -v ./...
-
-    - name: Test
-      run: go test ./tripsgo/... -run Unit
-#       run: go test -v ./...
-
     - uses: azure/docker-login@v1 
       with: 
         login-server: openhackiaw3kcz1acr.azurecr.io
@@ -40,6 +25,13 @@ jobs:
     - run: | 
         docker build . -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-trips:${{ github.sha }} 
         docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-trips:${{ github.sha }}
+
+    - uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'openhackiaw3kcz1poi'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-trips:${{ github.sha }}'
+        slot-name: staging
 
     - name: The job has failed
       if: ${{ failure() }}
