--- a/.github/workflows/nodejsv2.yaml
+++ b/.github/workflows/nodejsv2.yaml
@@ -33,8 +33,8 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }} 
        
     - run: | 
-        docker build . -t openhackiaw3kcz1acr.azurecr.io/appdb:${{ github.sha }} 
-        docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }}
+        docker build . -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }} 
+        docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }} 
     - name: The job has failed
       if: ${{ failure() }}
       run: gh issue create --title "${{ github.workflow }}-${{ github.run_id }}" --body "Here are more details."
