--- a/.github/workflows/nodejs_build.yaml
+++ b/.github/workflows/nodejs_build.yaml
@@ -23,7 +23,7 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }} 
        
     - run: | 
-        docker build ./apis/userprofile/web -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }} 
+        docker build . -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }} 
         docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }} 
         
     - uses: azure/webapps-deploy@v2
