--- a/.github/workflows/trips_build.yml
+++ b/.github/workflows/trips_build.yml
@@ -28,7 +28,7 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: 'openhackiaw3kcz1poi'
+        app-name: 'openhackiaw3kcz1trips'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-trips:${{ github.sha }}'
         slot-name: staging
