--- a/.github/workflows/nodejs_build.yaml
+++ b/.github/workflows/nodejs_build.yaml
@@ -28,7 +28,7 @@ jobs:
         
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: 'openhackiaw3kcz1poi'
+        app-name: 'openhackiaw3kcz1userprofile'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }}'
         slot-name: staging
