--- a/.github/workflows/trips_build.yml
+++ b/.github/workflows/trips_build.yml
@@ -15,6 +15,10 @@ jobs:
         working-directory: ./apis/trips/
     steps:
     - uses: actions/checkout@v2
+    
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - uses: azure/docker-login@v1 
       with: 
@@ -26,12 +30,18 @@ jobs:
         docker build . -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-trips:${{ github.sha }} 
         docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-trips:${{ github.sha }}
 
-    - uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'openhackiaw3kcz1trips'
-        publish-profile: ${{ secrets.AZURE_WEB_APP_PUBLISH_PROFILE_TRIPS }}
-        images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-trips:${{ github.sha }}'
-        slot-name: staging
+        
+    - name: Deploying container to app service
+      run: az webapp config container set --name openhackiaw3kcz1trips --slot staging --resource-group openhackiaw3kcz1rg --docker-custom-image-name openhackiaw3kcz1acr.azurecr.io/devopsoh/api-trips:${{ github.sha }}  --docker-registry-server-url https://openhackiaw3kcz1acr.azurecr.io
+
+    - name: Swap Staging to Prod
+      run: |
+        az webapp deployment slot swap \
+          -g openhackiaw3kcz1rg \ 
+          -n openhackiaw3kcz1trips \ 
+          --slot staging \
+          --target-slot production
+
 
     - name: The job has failed
       if: ${{ failure() }}
