--- a/.github/workflows/swapslot.yaml
+++ b/.github/workflows/swapslot.yaml
@@ -4,7 +4,7 @@ name: Swap App Service Slot
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 on:
   repository_dispatch:
-    types: [swapslot]
+    types: [swapslots]
 jobs:
   myEvent:
     runs-on: ubuntu-latest
