--- a/.github/workflows/nodejs_build.yaml
+++ b/.github/workflows/nodejs_build.yaml
@@ -16,6 +16,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
    
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+   
     - uses: azure/docker-login@v1 
       with: 
         login-server: openhackiaw3kcz1acr.azurecr.io
@@ -25,14 +29,23 @@ jobs:
     - run: | 
         docker build . -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }} 
         docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }} 
-        
+       
     - name: Deploying container to app service
       run: az webapp config container set --name openhackiaw3kcz1userprofile --slot staging --resource-group openhackiaw3kcz1rg --docker-custom-image-name openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }}  --docker-registry-server-url https://openhackiaw3kcz1acr.azurecr.io
 
+    - name: Swap Staging to Prod
+      run: |
+        az webapp deployment slot swap -g openhackiaw3kcz1rg -n openhackiaw3kcz1userprofile --slot staging --target-slot production   
+       
+#    - uses: azure/webapps-deploy@v2
+#      with:
+#      app-name: 'openhackiaw3kcz1userprofile'
+#      publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+#       images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }}'
+#       slot-name: staging
         
     - name: The job has failed
       if: ${{ failure() }}
       run: gh issue create --title "${{ github.workflow }}-${{ github.run_id }}" --body "Here are more details."
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
