--- a/.github/workflows/dotnet_build.yml
+++ b/.github/workflows/dotnet_build.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
      
     - uses: azure/docker-login@v1 
       with: 
@@ -23,13 +27,17 @@ jobs:
     - run: | 
         docker build ./apis/poi/web -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }} 
         docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}
-    
-    - uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'openhackiaw3kcz1poi'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}'
-        slot-name: staging
+  
+    - name: Deploying container to app service
+      run: az webapp config container set --name openhackiaw3kcz1poi --slot staging --resource-group openhackiaw3kcz1rg --docker-custom-image-name openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}  --docker-registry-server-url https://openhackiaw3kcz1acr.azurecr.io
+
+  
+ #   - uses: azure/webapps-deploy@v2
+ #     with:
+ #       app-name: 'openhackiaw3kcz1poi'
+ #       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+ #       images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}'
+ #       slot-name: staging
     
     - name: Checking workflow status
       if: ${{ failure() }}
