--- a/.github/workflows/user-java-api-build.yml
+++ b/.github/workflows/user-java-api-build.yml
@@ -8,10 +8,15 @@ on:
   workflow_dispatch:
   push:
     branches: [ develop ]
-    paths: apis/user-java/**
+    paths: 
+    - 'apis/user-java/**'
+    - '!apis/user-java/api-status-check.sh'
+    
   pull_request:
     branches: [ main ]
-    paths: apis/user-java/**
+    paths: 
+    - 'apis/user-java/**'
+    - '!apis/user-java/api-status-check.sh'
 
 jobs:
   build:
