--- a/.github/workflows/swapslot.yaml
+++ b/.github/workflows/swapslot.yaml
@@ -1,4 +1,4 @@
-name: Swap App Service Slot ${{ github.event.client_payload.app }}
+name: Swap App Service Slot
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 on:
