--- a/.github/workflows/user-java-api-main-deploy.yaml
+++ b/.github/workflows/user-java-api-main-deploy.yaml
@@ -9,7 +9,6 @@ on:
     branches: [ main ]
     paths: 
     - 'apis/user-java/**'
-    - '!apis/user-java/api-status-check.sh'
     
 jobs:
   build:
@@ -42,7 +41,7 @@ jobs:
     - name: checking deploy status
       run: |
         echo "Checking api health"
-        ~/apis/user-java/api-status-check.sh https://openhackiaw3kcz1userjava-staging.azurewebsites.net/api/healthcheck/user-java 'json_status="healthy"' 
+        ./deployscripts/api-status-check.sh https://openhackiaw3kcz1userjava-staging.azurewebsites.net/api/healthcheck/user-java 'json_status="healthy"' 
         
     - name: Repository Dispatch
       uses: peter-evans/repository-dispatch@v1
