--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Swap App Service Slot
+name: Create a Release
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 on:
