--- a/.github/workflows/dotnet_build.yml
+++ b/.github/workflows/dotnet_build.yml
@@ -38,11 +38,9 @@ jobs:
  #       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
  #       images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}'
  #       slot-name: staging
+   
     - name: checking deploy status
-      run: |
-        echo "Checking api health"
-        ./apis/poi/api-status-check.sh https://openhackiaw3kcz1poi-staging.azurewebsites.net/api/healthcheck/poi 'json_status="healthy"' 
-        
+      run: bash ./deployscripts/api-status-check.sh https://openhackiaw3kcz1userjava-staging.azurewebsites.net/api/healthcheck/user-java 'json_status="healthy"' 
     
     - name: Repository Dispatch
       uses: peter-evans/repository-dispatch@v1
