--- a/.github/workflows/nodejs_build.yaml
+++ b/.github/workflows/nodejs_build.yaml
@@ -38,7 +38,7 @@ jobs:
    #     az webapp deployment slot swap -g openhackiaw3kcz1rg -n openhackiaw3kcz1userprofile --slot staging --target-slot production   
    
     - name: checking deploy status
-      run: bash ./deployscripts/api-status-check.sh https://openhackiaw3kcz1userprofile.azurewebsites.net/api/healthcheck/user '"status":"healthy"' 
+      run: bash ../../deployscripts/api-status-check.sh https://openhackiaw3kcz1userprofile-staging.azurewebsites.net/api/healthcheck/user 'json_status="healthy"' 
         
     - name: Repository Dispatch
       uses: peter-evans/repository-dispatch@v1
