--- a/.github/workflows/user-java-api-main-deploy.yaml
+++ b/.github/workflows/user-java-api-main-deploy.yaml
@@ -27,16 +27,16 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }} 
        
     - name: Build docker container 
-      run: docker build ./apis/user-java/ -t openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}
+      run: docker build ./apis/user-java/ -t openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.run_number }}
     
-    - name: Pushing container image to ACR
-      run: docker push openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}
+    - name: Pushing container image to ACR 
+      run: docker push openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.run_number }}
 
     - name: list all web app available
       run: az webapp list -o table
 
     - name: Deploying container to app service
-      run: az webapp config container set --name openhackiaw3kcz1userjava --slot staging --resource-group openhackiaw3kcz1rg --docker-custom-image-name openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.sha }}  --docker-registry-server-url https://openhackiaw3kcz1acr.azurecr.io
+      run: az webapp config container set --name openhackiaw3kcz1userjava --slot staging --resource-group openhackiaw3kcz1rg --docker-custom-image-name openhackiaw3kcz1acr.azurecr.io/api-user-java:${{ github.run_number }}  --docker-registry-server-url https://openhackiaw3kcz1acr.azurecr.io
 
     - name: checking deploy status
       run: bash ./deployscripts/api-status-check.sh https://openhackiaw3kcz1userjava-staging.azurewebsites.net/api/healthcheck/user-java 'json_status="healthy"' 
@@ -49,7 +49,7 @@ jobs:
         event-type: swapslots
         client-payload: '{"app": "openhackiaw3kcz1userjava", "rg" : "openhackiaw3kcz1rg"}'
         
-    - name: Checking workflow status
+    - name: Checking workflow status (create issue if failure)
       if: ${{ failure() }}
       run: gh issue create --title "${{ github.workflow }}-${{ github.run_id }}" --body "User-Java CD worflow failed."
       env:
