--- a/.github/workflows/dotnet_build.yml
+++ b/.github/workflows/dotnet_build.yml
@@ -28,6 +28,9 @@ jobs:
         docker build ./apis/poi/web -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }} 
         docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}
   
+    - name: Starting  Staging Slot
+      run: az webapp start --name openhackiaw3kcz1poi --slot staging --resource-group openhackiaw3kcz1rg 
+  
     - name: Deploying container to app service
       run: az webapp config container set --name openhackiaw3kcz1poi --slot staging --resource-group openhackiaw3kcz1rg --docker-custom-image-name openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}  --docker-registry-server-url https://openhackiaw3kcz1acr.azurecr.io
 
