--- a/.github/workflows/nodejs_build.yaml
+++ b/.github/workflows/nodejs_build.yaml
@@ -27,11 +27,11 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }} 
        
     - run: | 
-        docker build . -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }} 
-        docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }} 
+        docker build . -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.run_number }} 
+        docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.run_number }} 
        
     - name: Deploying container to app service
-      run: az webapp config container set --name openhackiaw3kcz1userprofile --slot staging --resource-group openhackiaw3kcz1rg --docker-custom-image-name openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.sha }}  --docker-registry-server-url https://openhackiaw3kcz1acr.azurecr.io
+      run: az webapp config container set --name openhackiaw3kcz1userprofile --slot staging --resource-group openhackiaw3kcz1rg --docker-custom-image-name openhackiaw3kcz1acr.azurecr.io/devopsoh/api-userprofile:${{ github.run_number }}  --docker-registry-server-url https://openhackiaw3kcz1acr.azurecr.io
 
    # - name: Swap Staging to Prod
    #   run: |
@@ -50,6 +50,6 @@ jobs:
         
     - name: The job has failed
       if: ${{ failure() }}
-      run: gh issue create --title "${{ github.workflow }}-${{ github.run_id }}" --body "Here are more details."
+      run: gh issue create --title "${{ github.workflow }}-${{ github.run_number }}" --body "Here are more details."
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
