--- a/.github/workflows/nodejs_build.yaml
+++ b/.github/workflows/nodejs_build.yaml
@@ -50,6 +50,6 @@ jobs:
         
     - name: The job has failed
       if: ${{ failure() }}
-      run: gh issue create --title "${{ github.workflow }}-${{ github.run_number }}" --body "Here are more details."
+      run: gh issue create --title "${{ github.workflow }}-${{ github.run_id }}" --body "Here are more details."
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
