--- a/.github/workflows/dotnet_build.yml
+++ b/.github/workflows/dotnet_build.yml
@@ -25,21 +25,21 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }} 
        
     - run: | 
-        docker build ./apis/poi/web -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }} 
-        docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}
+        docker build ./apis/poi/web -t openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.run_number }} 
+        docker push openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.run_number }}
   
     - name: Starting  Staging Slot
       run: az webapp start --name openhackiaw3kcz1poi --slot staging --resource-group openhackiaw3kcz1rg 
   
     - name: Deploying container to app service
-      run: az webapp config container set --name openhackiaw3kcz1poi --slot staging --resource-group openhackiaw3kcz1rg --docker-custom-image-name openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}  --docker-registry-server-url https://openhackiaw3kcz1acr.azurecr.io
+      run: az webapp config container set --name openhackiaw3kcz1poi --slot staging --resource-group openhackiaw3kcz1rg --docker-custom-image-name openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.run_number }}  --docker-registry-server-url https://openhackiaw3kcz1acr.azurecr.io
 
   
  #   - uses: azure/webapps-deploy@v2
  #     with:
  #       app-name: 'openhackiaw3kcz1poi'
  #       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
- #       images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.sha }}'
+ #       images: 'openhackiaw3kcz1acr.azurecr.io/devopsoh/api-poi:${{ github.run_number }}'
  #       slot-name: staging
    
     - name: checking deploy status
