--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,8 @@ jobs:
        env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
        with:
-         tag_name: v${{ github.event.client_payload.run }}
-         release_name: Release v${{ github.event.client_payload.run }}
+         tag_name: ${{ github.event.client_payload.run }}
+         release_name: Release ${{ github.event.client_payload.run }}
          body: "${{ github.event.client_payload.app }} changed"
          draft: false
          prerelease: false
