--- a/.github/workflows/rollback-trips.yml
+++ b/.github/workflows/rollback-trips.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Repo Dispatch Event
+name: Rollback Trips
 
 # Controls when the workflow will run
 on:
