--- a/.github/workflows/dotnet_build.yml
+++ b/.github/workflows/dotnet_build.yml
@@ -51,7 +51,7 @@ jobs:
         token: ${{ secrets.REPO_ACCESS_TOKEN }}
         repository: OpenHack-DevOps-Morning-Avengers/MyDriving
         event-type: swapslots
-        client-payload: '{"app": "openhackiaw3kcz1poi", "rg" : "openhackiaw3kcz1rg"}'
+        client-payload: '{"app": "openhackiaw3kcz1poi", "rg" : "openhackiaw3kcz1rg", "run" : "${{ github.run_number }}"}'
     
     
     - name: Checking workflow status
